--- a/UFPR.sty
+++ b/UFPR.sty
@@ -332,11 +332,11 @@
 \setlength{\cftbeforesubsubsectionskip}{0pt} 
 \setlength{\cftbeforechapterskip}{\onelineskip} 
 
-% Alteração da indentação dos itens do sumário
-\cftsetindents{chapter}{0pt}{42pt}
-\cftsetindents{section}{0pt}{42pt}
-\cftsetindents{subsection}{0pt}{42pt}
-\cftsetindents{subsubsection}{0pt}{42pt}
+%% Alteração da indentação dos itens do sumário
+%\cftsetindents{chapter}{0pt}{42pt}
+%\cftsetindents{section}{0pt}{42pt}
+%\cftsetindents{subsection}{0pt}{42pt}
+%\cftsetindents{subsubsection}{0pt}{42pt}
 
 % Modifica a formatacao dos textos 
  
@@ -493,16 +493,16 @@
     pdfmenubar=true,        % show Acrobat’s menu?
     pdffitwindow=false,     % window fit to page when opened
 %    pdfstartview={FitW},    % fits the width of the page to the window
-    pdftitle={},    % title
-    pdfauthor={},     % author
+    pdftitle={},     % title
+    pdfauthor={},    % author
     pdfsubject={},   % subject of the document
     pdfcreator={},   % creator of the document
     pdfproducer={},  % producer of the document
-    pdfkeywords={}, % list of keywords
-    pdfnewwindow=true,      % links in new window
-    colorlinks=true,       % false: boxed links; true: colored links
-    linkcolor=black,          % color of internal links
-    citecolor=black,        % color of links to bibliography
+    pdfkeywords={},  % list of keywords
+    pdfnewwindow=true,    % links in new window
+    colorlinks=true,      % false: boxed links; true: colored links
+    linkcolor=black,      % color of internal links
+    citecolor=black,      % color of links to bibliography
     filecolor=black,      % color of file links
 }
 \makeatother
