Desativando sumario tradicional
Comandos de espaçamento vertical para títulos de seções primarias póstextuais foram ajustados.

--- a/main.tex
+++ b/main.tex
@@ -64,7 +64,7 @@
         portugues,                      % o último idioma é o principal do documento
         %%%%%%%%%%%%
         %eek: colocação da opção para o sumario ter formatação tradicional
-        sumario=tradicional             % título no formato tradicional
+        %sumario=tradicional             % título no formato tradicional
         ]{abntex2}
 
 
@@ -146,7 +146,7 @@
 
 % Ajuste vertical do titulo de referencias no sumário
 % ----------------------------------------------------------
-\addtocontents{toc}{\vspace{-24pt}}
+\addtocontents{toc}{\vspace{4pt}}
 
 % Referências bibliográficas
 % ----------------------------------------------------------
@@ -163,7 +163,7 @@
 
 % Ajuste vertical dos titulos dos capitulos postextuais
 % ----------------------------------------------------------
-\addtocontents{toc}{\vspace{-12pt}}
+\addtocontents{toc}{\vspace{4pt}}
 
 % Glossário
 % ----------------------------------------------------------
