Ajuste de espeaçamento vertical no sumário
Desativação do sumário tradicional

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -330,7 +330,7 @@
 \setlength{\cftbeforesubsectionskip}{0pt} 
 \setlength{\cftbeforesectionskip}{0pt} 
 \setlength{\cftbeforesubsubsectionskip}{0pt} 
-\setlength{\cftbeforechapterskip}{\onelineskip} 
+\setlength{\cftbeforechapterskip}{0pt} 
 
 %% Alteração da indentação dos itens do sumário
 %\cftsetindents{chapter}{0pt}{42pt}
