Ajuste formatação do título de referencias
Devido a desativação do sumário tradicional, o alinhamento do título REFERÊNCIAS necessita desconsiderar o comprimento da numeração da seção

--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -75,7 +75,8 @@
   \chapter*{#1}%
   \markboth{#1}{#1}%
   \addcontentsline{toc}{chapter}
-  {\protect\numberline{}\bibname}
+  %{\protect\numberline{}\bibname}
+  {\bibname}
 }
 
 % Formatando o avançao dos títulos no sumário 
