Uso do comando chapter nos anexos
uso do comando chapter nos anexos após desativação do sumário tradicional

--- a/ax01.tex
+++ b/ax01.tex
@@ -1,10 +1,10 @@
    % --- insere um capítulo que é tratado como um apêndice
-   \poschap{anexando ESCOLHA DO MATERIAL}
+   \chapter{anexando ESCOLHA DO MATERIAL}
     
    \lipsum[30] % gera um parágrafo
     \section*{anexando testes secao}
     
 
-\poschap{anexando ESCOLHA DO MATERIAL DE IMPRESSÃO}
+\chapter{anexando ESCOLHA DO MATERIAL DE IMPRESSÃO}
     
    \lipsum[32] % gera um parágrafo
