--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -86,6 +86,23 @@
 	\pretocmd{\section}{\addtocontents{toc}{\protect\addvspace{-3\p@}}}{}{}
 \makeatother
 
+% https://groups.google.com/g/abntex2/c/ZYwE4t9uTFM
+\makeatletter
+\let\oldcontentsline\contentsline
+\def\contentsline#1#2{%
+	\expandafter\ifx\csname l@#1\endcsname\l@section
+	\expandafter\@firstoftwo
+	\else
+	\expandafter\@secondoftwo
+	\fi
+	{%
+		\oldcontentsline{#1}{\MakeTextUppercase{#2}}%
+	}{%
+		\oldcontentsline{#1}{#2}%
+	}%
+}
+\makeatother
+
 % Para retirar os símbolos <> da URL  
 % ----------------------------------------------------------
 \DeclareFieldFormat{illustrated}{\addspace #1\isdot}%
@@ -158,7 +175,7 @@
 % ----------------------------------------------------------
 \usepackage{listings}
 
-%Comando para fazer 
+% Comando para fazer 
 %    a citação de documentos não publicados e informais e 
 %    colocar as referências nas notas de rodapé
 % ----------------------------------------------------------
