--- a/UFPR.sty
+++ b/UFPR.sty
@@ -90,6 +90,17 @@
 \renewcommand{\ABNTEXsubsubsubsectionfontsize}{\normalsize}
 %----------------------------------------------------------------------------- 
 
+\renewcommand{\cftchapterpagefont}{\cftsectionfont}
+
+\renewcommand{\cftsectionfont}{\normalfont}
+\renewcommand{\cftsectionpagefont}{\cftsectionfont}
+
+\renewcommand{\cftsubsectionfont}{\normalfont}
+\renewcommand{\cftsubsectionpagefont}{\cftsectionfont}
+
+\renewcommand{\cftsubsubsectionfont}{\normalfont}
+\renewcommand{\cftsubsubsectionpagefont}{\cftsectionfont}
+
 %----------------------------------------------------------------------------- 
 % Nomes constantes do abnTeX2 em portugues (definicoes padroes)
 %----------------------------------------------------------------------------- 
