--- a/main.tex
+++ b/main.tex
@@ -1,55 +1,255 @@
-\documentclass[12pt,twoside]{memoir}
+%%
+%% abtex2-modelo-trabalho-academico.tex, v-1.9.2 laurocesar
+%% Copyright 2012-2017 by abnTeX2 group at http://abntex2.googlecode.com/ 
+%%
+%% This work may be distributed and/or modified under the
+%% conditions of the LaTeX Project Public License, either version 1.3
+%% of this license or (at your option) any later version.
+%% The latest version of this license is in
+%%   http://www.latex-project.org/lppl.txt
+%% and version 1.3 or later is part of all distributions of LaTeX
+%% version 2005/12/01 or later.
+%%
+%% This work has the LPPL maintenance status `maintained'.
+%% 
+%% The Current Maintainer of this work is Emílio Eiji Kavamura,
+%% eek.edu@outlook.com; emilio.kavamura@ufpr.br
+%% Further information about abnTeX2 are available on 
+%%
+%% http://abntex2.googlecode.com/
+%%
+%% https://code.google.com/p/abntex2/issues/ 
+%%
+%% Further information about UFPR abnTeX2 are available on 
+%%
+%% https://github.com/eekBR/ufpr-abntex/
+%%
+%% This work consists of the files 
+% 
+%          main.tex   programa principal
+%      00-dados.tex   entrada de dados 
+%    00-pacotes.tex   pacotes carregados no modelo
+% 00-pretextual.tex   processamento dos elementos pre-textuais
+%          UFPR.sty   ajusta do modelo canonico às normas  UFPR
+%
+%    referencias.bib
+%                     e outras arquivos de imagens
+%
+%
+%------------------------------------------------------------------------
+% ------------------------------------------------------------------------
+% abnTeX2: Modelo de Trabalho Academico (tese de doutorado, dissertacao de
+% mestrado e trabalhos monograficos em geral) em conformidade com 
+% ABNT NBR 6023:2018: Informação e documentação - Referências - Elaboração
+% ------------------------------------------------------------------------
+% ------------------------------------------------------------------------
+%
+% DATA DE ATUALIZAÇÃO: 2020-06-10
 
-\input{configuracoes}
+\documentclass[
+        % -- opções da classe memoir --
+        12pt,                           % tamanho da fonte
+        openright,                      % capítulos começam em pág ímpar (insere página vazia caso preciso)
+        %twoside,                        % para impressão em verso e anverso. Oposto a oneside
+        oneside,
+        a4paper,                        % tamanho do papel. 
+        % -- opções da classe abntex2 --
+        chapter=TITLE,         % títulos de capítulos convertidos em letras maiúsculas
+        section=TITLE,         % títulos de seções convertidos em letras maiúsculas
+        subsection=Title,      % títulos de subseções convertidos em letras maiúsculas
+        %subsubsection=TITLE,  % títulos de subsubseções convertidos em letras maiúsculas
+        % -- opções do pacote babel --
+        english,                        % idioma adicional para hifenização
+        %french,                         % idioma adicional para hifenização
+        spanish,                        % idioma adicional para hifenização
+        portugues,                      % o último idioma é o principal do documento
+        %%%%%%%%%%%%
+        %eek: colocação da opção para o sumario ter formatação tradicional
+        %sumario=tradicional             % título no formato tradicional
+        ]{abntex2}
 
-%\title{EDI\c{C}\~AO DAS REGRAS OFICIAIS DO SOFTBOL 2018-2021}
-\title{EDI\c{C}\~AO DAS REGRAS OFICIAIS DO SOFTBOL 2022-2025}
-\author{WBSC -- SD (autor)\\ Emílio E. Kavamura (editor)}
-\date{2022}
+\usepackage{UFPR}
+\input{00-pacotes}
+\input{00-dados}
 
-%\setlist[itemize,1]{leftmargin=\dimexpr 50mm-1.5in}
+% compila o indice
+% 
+% ----------------------------------------------------------
 
-\input{00-glossary}
 
-\makeglossaries
-
+\makeindex
+% ----------------------------------------------------------
+% Início do documento
+% ----------------------------------------------------------
 \begin{document}
-	\selectlanguage{portuges}
-	%\renewcommand{\sectionname}{SEC\c{C}\~AO}
-	%\fancyhead[R]{\overview}\mbox{}\newpage % This produces the overview page
-	%\fancyhead[R]{} % Front matter may follow here
-	%\clearpage
-	%\fancyhead[RE]{\rightmark}
-	%\fancyhead[RO]{\rblob}
-	%\fancyhead[LE]{\lblob}
-	%\fancyhead[LO]{{\leftmark}}
+% ----------------------------------------------------------
+% Adequando o uppercase titulo dos elementos nas suas respectivas legendas
+% Definicoes que n\~ao funcionaram quando colocados no arquivo de estilos ou de pacotes
 
+\renewcommand{\bibname}{{REFER\^ENCIAS}}
+\renewcommand{\tablename}{TABELA }
+\renewcommand{\figurename}{FIGURA }
+\renewcommand{\figureautorefname}{FIGURA}
+\renewcommand{\tableautorefname}{TABELA}
+\newcommand{\equationname}{EQUA\c{C}\~AO~}
+\renewcommand{\equationautorefname}{EQUA\c{C}\~AO~}
 
-	\renewcommand{\appendixname}{AP\^ENDICE}
-	\setlist[enumerate]{topsep=1mm,itemsep=1.75mm,partopsep=1.5mm,parsep=.5mm}
-	% Alteração da indentação dos itens do sumário
-	\cftsetindents{chapter}{0pt}{62pt}
-	\cftsetindents{section}{0pt}{62pt}
-	\cftsetindents{subsection}{7pt}{55pt}
-	\cftsetindents{subsubsection}{14pt}{55pt}
+% Para ajustar o tamanho da fonte do número da primeira página do capítulo
+\aliaspagestyle{chapter}{chapfirst}% customizing chapter pagestyle
 
-	\pagestyle{fancy}
+\input{00-pretextual}
 
-	\maketitle
-	\tableofcontents*
-	\input{2022-2025-ptbr}
+% ----------------------------------------------------------
+% ELEMENTOS TEXTUAIS
+% ----------------------------------------------------------
+\textual % \pagestyle{textualUFPR}
 
-	\input{corpo.tex}
-	
+\pagestyle{simplestextual}
+% sugerido por Youssef Cherem 20170316
+% https://mail.google.com/mail/u/0/?tab=wm#inbox/15ad3fe6f4e5ff1f
 
-%	\appendix
-	%\renewcommand{\thesection}{AP\^ENDICE~\arabic{section}}
-%	\renewcommand{\thechapter}{ANEXO~\arabic{chapter}}
-%	\renewcommand{\thesection}{\Alph{section}}
-%	\renewcommand{\thesubsection}{\Alph{subsection}}
-	\input{anexos}
+% Introdução (exemplo de capítulo sem numeração, mas presente no Sumário)
+% ----------------------------------------------------------
+\input{cap01}
 
+% PARTE DA PREPARAÇÃO DA PESQUISA
+% ----------------------------------------------------------
+%\part{Preparação da pesquisa}
+%\input{cap02}
+%
 
-	\printglossary
+% PARTE DOS REFERENCIAIS TEÓRICOS
+% ----------------------------------------------------------
+%\part{Referenciais teóricos}
+%\input{cap03}
+
+% PARTE DOS RESULTADOS
+% ----------------------------------------------------------
+%\part{Resultados}
+%\input{cap05}
+
+% Finaliza a parte no bookmark do PDF
+% para que se inicie o bookmark na raiz
+% e adiciona espaço de parte no Sumário
+% ----------------------------------------------------------
+%\phantompart
+
+% ---
+% Conclusão (outro exemplo de capítulo sem numeração e presente no sumário)
+% ---
+%\chapter*[Conclusão]{Conclusão}
+%\addcontentsline{toc}{chapter}{Conclusão}
+% ---
+%\input{cap06}
+
+% ELEMENTOS PÓS-TEXTUAIS
+% ----------------------------------------------------------
+\postextual
+
+% Ajuste vertical do titulo de referencias no sumário
+% ----------------------------------------------------------
+\addtocontents{toc}{\vspace{-6pt}}
+
+% Referências bibliográficas
+% ----------------------------------------------------------
+%\bibliography{referencias}
+
+\begingroup
+
+\printbibliography[heading=bay,notkeyword= {consulta}, notkeyword={npub-informal}]
+
+\printbibliography [keyword= consulta, title = FONTES DE CONSULTA]
+\endgroup
+
+% ----------------------------------------------------------
+
+% Ajuste vertical dos titulos dos capitulos postextuais
+% ----------------------------------------------------------
+\addtocontents{toc}{\vspace{4pt}}
+
+% Glossário
+% ----------------------------------------------------------
+% Consulte o manual da classe abntex2 para orientações sobre o glossário.
+%
+%\glossary
+
+% Apêndices
+% ----------------------------------------------------------
+\ifthenelse{\equal{\terApendice}{Sim}}
+{\begin{apendicesenv}
+
+        % Numeração arábica para os apêndices
+        % --------------------------------------------------
+        \renewcommand{\thechapter}{\arabic{chapter}}
+        % Imprime uma página indicando o início dos apêndices
+        % \partapendices
+
+        % Existem várias formas de se colocar anexos.
+        % O exemplo abaixo coloca 2 apêndices denominados de 
+        % DESENVOLVIMENTO DETALHADO DA PINTURA e 
+        % ESCOLHA DO MATERIAL DE IMPRESSÃO:
+        % ---
+        % --- insere um capítulo que é tratado como um apêndice
+        %\chapter{DESENVOLVIMENTO DETALHADO DA PINTURA}
+        % 
+        %\lipsum[29] % gera um parágrafo
+        %
+        % --- insere um capítulo que é tratado como um apêndice
+        %\chapter{ESCOLHA DO MATERIAL DE IMPRESSÃO}
+        % 
+        %\lipsum[30] % gera um parágrafo
+
+        % --- Insere o texto do arquivo ap01.tex
+        % 
+        % --- O conteúdo do arquivo pode ser vários anexos ou um único apêndices.
+        %     A vantagem de se utilizar este procedimento é de suprimi-lo
+        %     das compilações enquanto se processa o resto do documento.
+
+        \input{ap01}
+
+\end{apendicesenv}
+}{}
+
+% Anexos
+% ----------------------------------------------------------
+\ifthenelse{\equal{\terAnexo}{Sim}}{
+\begin{anexosenv}
+
+        % Numeração arábica para os apêndices
+        % --------------------------------------------------
+        \renewcommand{\thechapter}{\arabic{chapter}}
+        % --- Imprime uma página indicando o início dos anexos
+        % \partanexos
+
+        % Existem várias formas de se colocar anexos.
+        % O exemplo abaixo coloca 2 anexos denominados de 
+        % TABELA DE VALORES e GRÁFICOS DE BALANCEMANTO:
+        % ---
+        % --- insere um capítulo que é tratado como um anexo
+        %\chapter{TABELAS DE VALORES}
+        % 
+        %\lipsum[31] % gera um parágrafo
+        %
+        % --- insere um capítulo que é tratado como um anexo
+        %\chapter{GRÁFICOS DE BALANCEAMENTO}
+        % 
+        %\lipsum[32] % gera um parágrafo
+
+        % --- Insere o texto do arquivo ax01.tex
+        % 
+        % --- O conteúdo do arquivo pode ser vários anexos ou um único anexo.
+        %     A vantagem de se utilizar este procedimento é de suprimi-lo
+        %     das compilações enquanto se processa o resto do documento.
+
+         \input{ax01} 
+\end{anexosenv}
+}{}
+
+% INDICE REMISSIVO
+%---------------------------------------------------------------------
+\ifthenelse{\equal{\terIndiceR}{Sim}}{
+\phantompart
+\printindex
+}{}
 
 \end{document}
