Opção do biblatex
opção firstinits trocado por giveninits

--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -53,7 +53,7 @@
     maxcitenames=2,
     backref=true,
     hyperref=true,
-    firstinits=true,
+    giveninits=true,
     uniquename=false,
     uniquelist=false]{biblatex}
     
