--- a/00-pretextual.tex
+++ b/00-pretextual.tex
@@ -156,7 +156,9 @@
 % ----------------------------------------------------------
 \ifthenelse{\equal{\terSumario}{Sim}}{
 %\pdfbookmark[0]{\contentsname}{toc}
+\pagestyle{empty}
 \tableofcontents*
+\thispagestyle{empty}
 %\cleardoublepage
 }{}
  
