--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -188,3 +188,10 @@
 
 \newcommand{\textcitenp}[1]{
 	\textcite{#1}\footnote{\fullcite{#1}}}
+
+ %%%%%%%%%%% NBR 10520/23
+
+ % Norma NBR10.520/2023 - Sobrenomes em minúsculas
+\renewcommand*{\mkbibnamefamily}[1]{#1}%
+
+
