--- a/00-dados.tex
+++ b/00-dados.tex
@@ -53,7 +53,8 @@
  \providecommand{\terListaFiguras}{Sim}
  \providecommand{\terListaQuadros}{Sim}
  \providecommand{\terListaTabelas}{Sim}
- \providecommand{\terSiglasAbrev}{Nao}
+ \providecommand{\terSiglasAbrev}{Nao} 
+ \providecommand{\terSimbolos}{Nao}
  \providecommand{\terResumos}{Nao}
  \providecommand{\terSumario}{Sim}
  \providecommand{\terAnexo}{Nao}
