--- a/main.tex
+++ b/main.tex
@@ -181,6 +181,9 @@
         % Numeração arábica para os apêndices
         % --------------------------------------------------
         \renewcommand{\thechapter}{\arabic{chapter}}
+        % Numeração Alfabética para os apêndices
+        % --------------------------------------------------
+        % \renewcommand{\thechapter}{\Alph{chapter}} %capitulos  com indicação Alfabética
         % Imprime uma página indicando o início dos apêndices
         % \partapendices
 
@@ -218,6 +221,9 @@
         % Numeração arábica para os apêndices
         % --------------------------------------------------
         \renewcommand{\thechapter}{\arabic{chapter}}
+        % Numeração Alfabética para os anexos
+        % --------------------------------------------------
+        % \renewcommand{\thechapter}{\Alph{chapter}} %capitulos  com indicação Alfabética
         % --- Imprime uma página indicando o início dos anexos
         % \partanexos
 
