--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -47,6 +47,7 @@
 	backend=biber,
 	citecounter=true,
 	backrefstyle=three, 
+ 	repeatfields=true,
 	url=true,
 	maxbibnames=99,
     mincitenames=1,
