--- a/referencias.bib
+++ b/referencias.bib
@@ -952,3 +952,13 @@ keywords={npub-informal},
 url={https://goo.gl/DhofqW},
 urlaccessdate={2009-01-31},
 }
+
+@misc{tipog,
+url={http://www.ufmg.br/online/arquivos/Memoria%20grafica.JPG},
+urldate={2024-08-15},
+title={Memória gráfica},
+author={Leo Drummond},
+address={UFMG},
+year={2005},
+keywords={consulta},
+}
