--- a/main.tex
+++ b/main.tex
@@ -91,8 +91,8 @@
 \renewcommand{\figurename}{FIGURA }
 \renewcommand{\figureautorefname}{FIGURA}
 \renewcommand{\tableautorefname}{TABELA}
-\newcommand{\equationname}{EQUA\c{C}\~AO~}
-\renewcommand{\equationautorefname}{EQUA\c{C}\~AO~}
+\newcommand{\equationname}{equa\c{c}\~ao~}
+\renewcommand{\equationautorefname}{equa\c{c}\~ao~}
 
 % Para ajustar o tamanho da fonte do número da primeira página do capítulo
 \aliaspagestyle{chapter}{chapfirst}% customizing chapter pagestyle
