--- a/referencias.bib
+++ b/referencias.bib
@@ -309,7 +309,7 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = aug,
-  Note                     = {Substitui a Ref.~\citeonline{NBR10520:2001}},
+  Note                     = {Substitui a Ref.~\textcite{NBR10520:2001}},
   Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {2002},
 
@@ -325,7 +325,7 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = aug,
-  Note                     = {Substitui a Ref.~\citeonline{NBR14724:2001}},
+  Note                     = {Substitui a Ref.~\textcite{NBR14724:2001}},
   Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {2002},
 
@@ -341,7 +341,7 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = aug,
-  Note                     = {Substitui a Ref.~\citeonline{NBR6023:2000}},
+  Note                     = {Substitui a Ref.~\textcite{NBR6023:2000}},
   Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {2002},
 
@@ -397,7 +397,7 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = jul,
-  Note                     = {Substitui a Ref.~\citeonline{NBR10520:1988}},
+  Note                     = {Substitui a Ref.~\textcite{NBR10520:1988}},
   Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {2001},
 
