--- a/cap01.tex
+++ b/cap01.tex
@@ -24,7 +24,7 @@ Para inserir uma figura com o comando \verb+\includegraphics+ para ficar de acor
 {FIGURA DE TIPOS PARA IMPRESSAO}  % Titulo
 {.75}                             % % da largura da linha
 {fig/tipog.png}                   % caminho da figura
-{\citefig{tipo2012}.}             % Fonte
+{\textcite{tipo2012}.}             % Fonte
 {tipoex}                          % label = fig:tipoex
 {Esta eh uma nota musical, 
  Esta eh uma nota musical e 
@@ -52,7 +52,7 @@ Para inserir um elemento gráfico gerado/compativel com o LaTeX, você tem o com
 {FIGURA DE TIPOS PARA IMPRESSAO}  % Titulo
 {.750}                            % %da largura da linha
 {fig/tipog.png}                   % caminho da figura
-{\citefig{tipo2012}.}             % Fonte
+{\textcite{tipo2012}.}             % Fonte
 {tipoex}                          % label = fig:tipoex
 {Esta eh uma nota musical. 
  Esta eh uma nota musical.
@@ -157,7 +157,7 @@ Este ambiente não quebra sua estrutura em páginas.
 {O autor(2021)}{quadrinho}{}{}
 
 
-A citação da fonte é feita por \verb+\citefig{bibkey}+.
+A citação da fonte é feita por \verb+\textcite{bibkey}+.
 
 Para fazer referência a este quadro, o comando \verb+\autoref{qua:quadrinho}+,\autoref{qua:quadrinho}
 
@@ -201,7 +201,7 @@ Para inserir uma tabela o comando é muito parecido, mas a normalização utiliz
 {\textcite{0230}}{exemplo}{Uma nota}{Uma legenda}
 
 
-A citação da fonte é feita por \verb+\citefig{bibkey}+.
+A citação da fonte é feita por \verb+\textcite{bibkey}+.
 
 Para fazer referência a este quadro, o comando \verb+\autoref{tab:exemplo}+, \autoref{tab:exemplo}
 \subsection[Equações]{Expressões matemáticas}
