--- a/cap01.tex
+++ b/cap01.tex
@@ -154,12 +154,12 @@ Este ambiente não quebra sua estrutura em páginas.
   \textbf{Elementos}:&itens enumerados& alíneas&teoremas&	axiomas & listagem &\\\hline
   \textbf{prefixos}:&inum &ali&teo& axi &lst&\\\hline
 \end{tabular}}
-{O autor(2021)}{quadrinho}{}{}
+{O autor(2021)}{quadrinho1}{}{}
 
 
 A citação da fonte é feita por \verb+\textcite{bibkey}+.
 
-Para fazer referência a este quadro, o comando \verb+\autoref{qua:quadrinho}+,\autoref{qua:quadrinho}
+Para fazer referência a este quadro, o comando \verb+\autoref{qua:quadrinho1}+,\autoref{qua:quadrinho1}
 
 
 \subsection[Tabelas]{Inserir tabelas}
