--- a/main.tex
+++ b/main.tex
@@ -93,6 +93,7 @@
 \renewcommand{\tableautorefname}{TABELA}
 \newcommand{\equationname}{equa\c{c}\~ao~}
 \renewcommand{\equationautorefname}{equa\c{c}\~ao~}
+\newcommand{\quadroautorefname}{QUADRO~}
 
 % Para ajustar o tamanho da fonte do número da primeira página do capítulo
 \aliaspagestyle{chapter}{chapfirst}% customizing chapter pagestyle
