--- a/cap01.tex
+++ b/cap01.tex
@@ -198,7 +198,7 @@ Para inserir uma tabela o comando é muito parecido, mas a normalização utiliz
 		cidade & 11.5 & 14.8& 9.3 \\\hline
 		estrada& 16.2 & 20.7& 13.4 \\\hline
 \end{tabular}}
-{\textcite{0230}}{exemplo}{Uma nota}{Uma legenda}
+{\textcite{ibge1993}}{exemplo}{Uma nota}{Uma legenda}
 
 
 A citação da fonte é feita por \verb+\textcite{bibkey}+.
