--- a/referencias.bib
+++ b/referencias.bib
@@ -21,7 +21,6 @@
   Author                   = {abnTeX2},
   Organization             = {Equipe abnTeX2},
   Year                     = {2013},
-
   Annote                   = {Este documento {\'e} derivado do \cite{abnt-bibtex-doc}},
   Bdsk-url-1               = {http://code.google.com/p/abntex2/},
   Date-added               = {2013-01-15 00:08:47 +0000},
@@ -158,7 +157,7 @@
   Date-added               = {2013-08-21 13:48:18 +0000},
   Date-modified            = {2013-08-21 13:55:50 +0000},
   Organization             = {http://biblioteca.ibge.gov.br/visualizacao/livros/liv23907.pdf},
-  Urlaccessdate            = {21 ago 2013}
+  Urlaccessdate            = {2013-08-21}
 }
 
 @Manual{oberdiek2011,
