--- a/cap01.tex
+++ b/cap01.tex
@@ -24,7 +24,7 @@ Para inserir uma figura com o comando \verb+\includegraphics+ para ficar de acor
 {FIGURA DE TIPOS PARA IMPRESSAO}  % Titulo
 {.75}                             % % da largura da linha
 {fig/tipog.png}                   % caminho da figura
-{\textcite{tipo2012}.}             % Fonte
+{\textcite{tipog}.}             % Fonte
 {tipoex}                          % label = fig:tipoex
 {Esta eh uma nota musical, 
  Esta eh uma nota musical e 
@@ -52,7 +52,7 @@ Para inserir um elemento gráfico gerado/compativel com o LaTeX, você tem o com
 {FIGURA DE TIPOS PARA IMPRESSAO}  % Titulo
 {.750}                            % %da largura da linha
 {fig/tipog.png}                   % caminho da figura
-{\textcite{tipo2012}.}             % Fonte
+{\textcite{tipog}.}             % Fonte
 {tipoex}                          % label = fig:tipoex
 {Esta eh uma nota musical. 
  Esta eh uma nota musical.
