--- a/main.tex
+++ b/main.tex
@@ -26,11 +26,12 @@
 %%
 %% This work consists of the files 
 % 
-%          main.tex   programa principal
-%      00-dados.tex   entrada de dados 
-%    00-pacotes.tex   pacotes carregados no modelo
-% 00-pretextual.tex   processamento dos elementos pre-textuais
-%          UFPR.sty   ajusta do modelo canonico às normas  UFPR
+%              main.tex   programa principal
+%          00-dados.tex   entrada de dados 
+%          00-pacotes.tex   pacotes carregados no modelo
+% 00-pacotesOpcionais.tex   pacotes opcionais
+      % 00-pretextual.tex   processamento dos elementos pre-textuais
+%                UFPR.sty   ajusta do modelo canonico às normas  UFPR
 %
 %    referencias.bib
 %                     e outras arquivos de imagens
