--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -9,7 +9,7 @@
 \usepackage{ifthen}		    	% para montar condicionais
 \usepackage[brazil]{babel}		% para utilizar termos em portugues
 \usepackage[final]{pdfpages}    % para incluir páginas de arquivos pdf
-\usepackage{amsmath}			% simbolos matematicos
+\usepackage{amsmath, amsfonts, amssymb}			% simbolos matematicos
 
 % Pacotes de citações BibLaTeX
 % ----------------------------------------------------------
