--- a/main.tex
+++ b/main.tex
@@ -71,7 +71,7 @@
 
 \usepackage{UFPR}
 \input{00-pacotes}
-\input{00-pacotesOpcionais}
+%\input{00-pacotesOpcionais}
 \input{00-dados}
 
 % compila o indice
