--- a/UFPR.sty
+++ b/UFPR.sty
@@ -492,7 +492,7 @@
 % ----------------------------------------------------------
 \makeatletter
 \hypersetup{
-    bookmarks=true,         % show bookmarks bar?
+%   bookmarks=true,         % show bookmarks bar?
     %unicode=false,          % non-Latin characters in Acrobat’s bookmarks
     pdftoolbar=true,        % show Acrobat’s toolbar?
     pdfmenubar=true,        % show Acrobat’s menu?
