--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -5,7 +5,9 @@
 \usepackage[utf8]{inputenc}		% Codificacao do documento (conversão automática dos acentos)
 \usepackage{lastpage}			% Usado pela Ficha catalográfica
 \usepackage{indentfirst}		% Indenta o primeiro parágrafo de cada seção.
-\usepackage{microtype} 			% para melhorias de justificação
+
+%\usepackage{microtype} 			% para melhorias de justificação 
+
 \usepackage{ifthen}		    	% para montar condicionais
 \usepackage[brazil]{babel}		% para utilizar termos em portugues
 \usepackage[final]{pdfpages}    % para incluir páginas de arquivos pdf
