--- a/main.tex
+++ b/main.tex
@@ -62,7 +62,7 @@
         % -- opções do pacote babel --
         english,                        % idioma adicional para hifenização
         %french,                         % idioma adicional para hifenização
-        spanish,                        % idioma adicional para hifenização
+ %       spanish,                        % idioma adicional para hifenização
         portugues,                      % o último idioma é o principal do documento
         %%%%%%%%%%%%
         %eek: colocação da opção para o sumario ter formatação tradicional
