--- a/main.tex
+++ b/main.tex
@@ -113,7 +113,10 @@
 
 % Introdução (exemplo de capítulo sem numeração, mas presente no Sumário)
 % ----------------------------------------------------------
-\input{cap01}
+% \input{cap01}
+% ha muitos recursos apresentados neste arquivo que necessitam dos pacotes opcionais
+% ele está comentado para não buscar estes recursos e compilar no overleaf
+
 
 % PARTE DA PREPARAÇÃO DA PESQUISA
 % ----------------------------------------------------------
